mailbox should have many messages; uids are not really uniq

--- a/config/database.yml
+++ b/config/database.yml
@@ -4,7 +4,7 @@ defaults: &defaults
   username: root
 
 development:
-  database: gmail_development
+  database: gmail
   password: 
   <<: *defaults
 
